test/cases/compile_errors/ref_deref_of_null_c_ptr.zig
export fn entry() void {
    const ptr: [*c]u8 = null;
    _ = &ptr.*;
}

// error
//
// :3:10: error: null pointer casted to type '*u8'
